# pyproject.toml
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LLMStart"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.11.7"
dependencies = [
    "lxml==6.0.2",
    "BeautifulSoup4==4.12.3",
    "pandas==2.2.3",
    "pyarrow==17.0.0",
    "faiss-cpu==1.9.0",
    "numpy>=1.25.0",
    "transformers==4.45.2",
    "datasets==2.18.0",
    "evaluate",
    "peft==0.10.0",
    "accelerate==0.27.0",
    "optimum",
    "sentencepiece==0.1.99",
    "nltk==3.9.1",
    "torch==2.4.0+cu118",
    "torchvision==0.19.0+cu118",
    "torchaudio==2.4.0+cu118",
    "tqdm==4.66.5",
    "tensorboard==2.13.0",
    "torchsummary==1.5.1",
    "fastapi[standard]",
    "langchain",
    "langchain-openai",
    "langchain_community",
    "langchain-huggingface"
]

[[tool.pip.index-url]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"

[tool.setuptools]
packages = []      # 只装依赖，不打包任何源码